--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -54,7 +54,7 @@ RUN apt-get update && \
 ARG R_VARIANT=40
 
 # Split installation in different layers to leverage caches
-RUN APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=true apt-key adv --keyserver keys.gnupg.net --recv-key "E19F5F87128899B192B1A2C2AD5F960A256A04AF" && \
+RUN APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=true apt-key adv --keyserver keyserver.ubuntu.com --recv-key "E19F5F87128899B192B1A2C2AD5F960A256A04AF" && \
     #
     # Install r-base from https://cloud.r-project.org/bin/linux/debian/
     echo "deb http://cloud.r-project.org/bin/linux/debian buster-cran$R_VARIANT/" > /etc/apt/sources.list.d/r-project.list && \
