--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:buster
+FROM debian:bullseye
 
 # Set non-built-time labels
 LABEL org.opencontainers.image.authors="Ayaz BADOURALY"
@@ -57,9 +57,9 @@ ARG R_VARIANT=40
 RUN APT_KEY_DONT_WARN_ON_DANGEROUS_USAGE=true apt-key adv --keyserver keyserver.ubuntu.com --recv-key "E19F5F87128899B192B1A2C2AD5F960A256A04AF" && \
     #
     # Install r-base from https://cloud.r-project.org/bin/linux/debian/
-    echo "deb http://cloud.r-project.org/bin/linux/debian buster-cran$R_VARIANT/" > /etc/apt/sources.list.d/r-project.list && \
+    echo "deb http://cloud.r-project.org/bin/linux/debian bullseye-cran$R_VARIANT/" > /etc/apt/sources.list.d/r-project.list && \
     apt-get update && \
-    apt-get install --assume-yes --target-release buster-cran$R_VARIANT r-base && \
+    apt-get install --assume-yes --target-release bullseye-cran$R_VARIANT r-base && \
     #
     # Install r-languageserver
     Rscript -e 'install.packages("languageserver", repos="https://cloud.r-project.org/")' && \
